[package]
name = "maximize-sum-of-array-after-k-negations"
version = "0.1.0"
authors = ["Checky-Hu <checkywho@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quicksort = { path = "../../base/quick-sort" }
